<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:example="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wall66"
    android:orientation="horizontal"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">


        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="20dp">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_marginTop="20dp">


                <LinearLayout
                    android:id="@+id/linearLayout12"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/bg_costum"
                    android:orientation="vertical">

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/linearLayout12"
                    android:layout_alignTop="@+id/linearLayout12"
                    android:layout_marginLeft="28dp"
                    android:layout_marginTop="-10dp"
                    android:background="@android:color/black"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/zmani_tefilot"
                    android:textColor="@android:color/white" />


                <android.lib.widget.verticalmarqueetextview.VerticalMarqueeTextView
                    android:id="@+id/MA_tefila_zmanim_TV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="15dp"
                    example:marqueeSpeed="40"
                    example:textColor="@android:color/black"
                    example:textSize="15sp"
                    example:textStyle="bold" />


                <TextView
                    android:id="@+id/MA_DafYomiTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="100dp"
                    android:textColor="@android:color/black"
                    android:textSize="24sp"
                    android:visibility="visible" />

            </RelativeLayout>


        </RelativeLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/MA_name_TV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:text="יוצאי חברון - טלזסטון"
                    android:textColor="@android:color/black"
                    android:textSize="40dp" />


                <TextClock
                    android:id="@+id/MA_TimeTC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:format24Hour="k:mm:ss"
                    android:textSize="60sp"
                    android:timeZone="GMT+0300" />

                <TextView
                    android:id="@+id/MA_date_TV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@android:color/black"
                    android:textSize="30sp" />


            </LinearLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="20dp"
                android:layout_weight="2">


                <LinearLayout
                    android:id="@+id/linearLayout11"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/bg_costum"
                    android:orientation="vertical">

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/linearLayout11"
                    android:layout_alignTop="@+id/linearLayout11"
                    android:layout_marginLeft="28dp"
                    android:layout_marginTop="-10dp"
                    android:background="@android:color/black"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/message"
                    android:textColor="@android:color/white" />


                <android.lib.widget.verticalmarqueetextview.VerticalMarqueeTextView
                    android:id="@+id/MA_messages_TV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:padding="7dp"
                    android:textColor="@android:color/black"
                    android:textSize="25sp"
                    example:marqueeSpeed="40"
                    example:textColor="@android:color/black"
                    example:textSize="15sp"
                    example:textStyle="bold" />


            </RelativeLayout>


        </LinearLayout>


        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_marginTop="20dp"
                android:padding="20dp">


                <LinearLayout
                    android:id="@+id/linearLayout1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/bg_costum"
                    android:orientation="vertical">

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/linearLayout1"
                    android:layout_alignTop="@+id/linearLayout1"
                    android:layout_marginLeft="28dp"
                    android:layout_marginTop="-10dp"
                    android:background="@android:color/black"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/zmanim"
                    android:textColor="@android:color/white" />

                <android.lib.widget.verticalmarqueetextview.VerticalMarqueeTextView
                    android:id="@+id/MA_zmanim_TV"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    example:marqueeSpeed="40"
                    example:textColor="@android:color/black"
                    example:textSize="10sp"
                    example:textStyle="bold" />


            </RelativeLayout>


        </RelativeLayout>

    </LinearLayout>


</RelativeLayout>